--- a/MiniMe1/Views/Products/Like.cshtml
+++ b/MiniMe1/Views/Products/Like.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<sharedAngular.Models.Products>
 
 @{
-    ViewData["Title"] = "הפריטים";
+    ViewData["Title"] = "מועדפים";
 }
 
 <h1>מוצרים</h1>
@@ -73,9 +73,9 @@
     </div>
     @if (Context.Session.GetString("user") != null)
     {
-    <p>
-        <a style="color:black"  asp-action="Create">+</a>
-    </p>
+        <p>
+            <a style="color:black" asp-action="Create">+</a>
+        </p>
     }
 
     <div class="row mt-4 ml-4 " style="direction: rtl">
@@ -99,14 +99,13 @@
                             ₪  @Html.DisplayFor(modelItem => item.Price)
                         </p>
                         <div class="row" style="direction:initial ">
-                            <div class="col-4">
-                                <a class="btn btn-outline-light" asp-action="AddToCart" asp-route-id="@item.Id">הוסף לסל</a>
+                            <div class="col-3">
+                                <a class="btn btn-outline-light" asp-action="AddToCart" asp-route-id="@item.Id">הוסף לסל </a>
                             </div>
-                            <div class="col-4">
+
+                            <div class="col-3">
                                 <a class="btn btn-outline-light" asp-action="AddToLike" asp-route-id="@item.Id">הוסף למועדפים</a>
                             </div>
-
-
 
 
 
