--- a/MiniMe1/Views/Shared/_Layout.cshtml
+++ b/MiniMe1/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
 
 
                     </ul>
-                    <a asp-controller="Products" asp-action="Index" class="btn">
+                    <a asp-controller="Products" asp-action="Like" class="btn">
                         <i class="heart-fill" dir="ltr">
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart-fill" fill="currentColor"
                                  xmlns="http://www.w3.org/2000/svg">
@@ -85,7 +85,7 @@
 
 
 
-                    <a asp-controller="Products" asp-action="Index" class="btn">
+                    <a asp-controller="Products" asp-action="Cart" class="btn">
                         <i class="cart3" dir="ltr">
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart3" fill="currentColor"
                                  xmlns="http://www.w3.org/2000/svg">
