--- a/MiniMe1/Views/Products/Details.cshtml
+++ b/MiniMe1/Views/Products/Details.cshtml
@@ -97,10 +97,14 @@
             <br>
             <a asp-action="AddToCart" asp-route-id="@Model.Id">
                 <p button type="button" class="btn btn-dark">הוספה לסל</button></p>
+                
             </a>
+            <a class="btn btn-outline-light" asp-action="AddToCart" asp-route-id="@Model.Id">הוסף לסל</a>
             <a asp-action="AddToLike" asp-route-id="@Model.Id">
                 <p button type="button" class="btn btn-dark">הוספה למועדפים</button></p>
+                
             </a>
+            <a class="btn btn-outline-light" asp-action="AddToLike" asp-route-id="@Model.Id">הוסף למועדפים</a>
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor"
                  xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd"
