--- a/MiniMe1/Views/Orders/Create.cshtml
+++ b/MiniMe1/Views/Orders/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model sharedAngular.Models.Orders
+﻿@model sharedAngular.Models.Order
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>Orders</h4>
+<h4>Order</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -16,11 +16,6 @@
                 <label asp-for="OrderNum" class="control-label"></label>
                 <input asp-for="OrderNum" class="form-control" />
                 <span asp-validation-for="OrderNum" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <input asp-for="UserId" class="form-control" />
-                <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="OrderDate" class="control-label"></label>
