--- a/MiniMe1/Views/Orders/Delete.cshtml
+++ b/MiniMe1/Views/Orders/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model sharedAngular.Models.Orders
+﻿@model sharedAngular.Models.Order
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Orders</h4>
+    <h4>Order</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -16,12 +16,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.OrderNum)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UserId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.OrderDate)
