--- a/MiniMe1/Views/Products/Index.cshtml
+++ b/MiniMe1/Views/Products/Index.cshtml
@@ -6,63 +6,18 @@
 }
 
 <h1>מוצרים</h1>
-<h3>סנן לפי:</h3>
-<div class="row mt-4" style="direction: rtl">
 
-    <div class="col">
-        <div class="d-flex flex-column align-items-start">
-            <label>קטגוריה</label>
-            <select class="custom-select ml-3">
-                <option>חולצות</option>
-                <option>מכנסיים</option>
-                <option>חצאיות</option>
-                <option>שמלות</option>
-                <option>מעילים</option>
-                <option>נעליים</option>
-            </select>
-        </div>
-    </div>
-
-    <div class="col">
-        <div class="d-flex flex-column align-items-start">
-            <label>מידה</label>
-            <select class="custom-select ml-3">
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>6</option>
-                <option>8</option>
-                <option>10</option>
-                <option>12</option>
-                <option>14</option>
-                <option>16</option>
-            </select>
-        </div>
-    </div>
-
-
-    <div class="col">
-        <div class="d-flex flex-column align-items-start">
-            <label>צבע</label>
-            <select class="custom-select ml-3">
-                <option>כחול</option>
-                <option>שחור</option>
-                <option>לבן</option>
-                <option>ורוד</option>
-                <option>אפור</option>
-            </select>
-        </div>
-    </div>
-    <div class="col">
-        <div class="d-flex flex-column align-items-start">
-            <label>מיין לפי</label>
-            <select class="custom-select ml-3">
-                <option>מבצעים</option>
-                <option>מחיר נמוך לגבוה</option>
-                <option>מחיר גבוה לנמוך</option>
-                <option>הכי פופולארי</option>
-                <option>לפי הא-ב</option>
-            </select>
+    <div class="row align">
+        <div class="col-md-12 mb-5">
+            <div class="d-flex">
+                <div class="btn-group show">
+                    <button class="btn btn-default btn-sm dropdown-toggle px-4" id="dropdownMenuReference" aria-expanded="true" type="button" data-toggle="dropdown">מיין לפי</button>
+                    <div class="dropdown-menu hide" aria-labelledby="dropdownMenuReference" x-placement="bottom-start">
+                        <a class="dropdown-item" asp-action="RatingByPrice">מחיר גבוה לנמוך</a>
+                        <a class="dropdown-item" asp-action="PriceDown">מחיר נמוך לגבוה</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -73,9 +28,9 @@
     </div>
     @if (Context.Session.GetString("user") != null)
     {
-    <p>
-        <a style="color:black"  asp-action="Create">+</a>
-    </p>
+        <p>
+            <a style="color:black" asp-action="Create">+</a>
+        </p>
     }
 
     <div class="row mt-4 ml-4 " style="direction: rtl">
